Support new fields (taxCode, vatNumber) WT-1542
